Bug 150829 - Calc Name Box field not updated immediately after undoing duplication of sheet
Summary: Calc Name Box field not updated immediately after undoing duplication of sheet
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:7.5.0 target:7.3.7 target:7.4.2
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-06 14:43 UTC by Xisco Faulí
Modified: 2022-09-07 18:41 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-09-06 14:43:12 UTC
This is a follow-up of bug 150307

Steps to reproduce:
1. Open calc
2. Define a name
3. Duplicate the sheet
4. Undo

-> Both names are still in the name box field

Reproduced after the fix for bug 150307

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 64f673238cf9b645a751e8f8137ca14e595a779a
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2022-09-06 14:44:19 UTC
Hi Eike,
This is similar to bug 150307, which you just fixed in master, but with slightly different steps
Comment 2 Commit Notification 2022-09-06 22:56:55 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/922b79a0f5a9151a6870ba395abcac5b54055275

Resolves: tdf#150829 Broadcast missing ScAreasChanged hint on sheet copy Undo

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Eike Rathke (retired, only occasionally showing up) 2022-09-06 22:58:52 UTC
Pending review
https://gerrit.libreoffice.org/c/core/+/139511 for 7-4
https://gerrit.libreoffice.org/c/core/+/139512 for 7-3
Comment 4 Xisco Faulí 2022-09-07 06:16:09 UTC
Verified in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 922b79a0f5a9151a6870ba395abcac5b54055275
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Eike, thanks for fixing this issue so quick!!
Comment 5 Commit Notification 2022-09-07 06:22:12 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/b73254d275ceff67e4929f2a11004aa7fca039df

Resolves: tdf#150829 Broadcast missing ScAreasChanged hint on sheet copy Undo

It will be available in 7.3.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-09-07 06:23:49 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/4f1670950e230eaaea7e3533134cb60fd7785195

Resolves: tdf#150829 Broadcast missing ScAreasChanged hint on sheet copy Undo

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-09-07 18:41:52 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cb4216a9c933bf64ec7a30340b596cb83fe1b599

tdf#150307, tdf#150829: sc: Add UItest

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.