Resolves: tdf#150829 Broadcast missing ScAreasChanged hint on sheet copy Undo

Change-Id: I354b1e395079067cd4cc9299501b3936dea00cd8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139538
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 922b79a0f5a9151a6870ba395abcac5b54055275)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139512
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>